﻿drkns 12.04.2014 19:15:45 +0200 - build 3864

1. Продолжение 0002645.

2. Опция EditorF7Rules удалена во имя консистентности.

drkns 12.04.2014 14:26:37 +0200 - build 3863

1. 0002591: Не устанавливается время в диалоге атрибутов файла.

drkns 12.04.2014 13:29:05 +0200 - build 3862

1. 0002645: Повторный поиск (ShiftF7) работает неправильно с опцией "Cursor at end"

2. 0002646: Повторный поиск (ShiftF7), если ничего не найдено, сдвигает курсор

zg 11.04.2014 16:02:53 +0200 - build 3861

1. gcc warnings.

drkns 11.04.2014 08:32:40 +0200 - build 3860

1. Уточнение 3859.1.

drkns 10.04.2014 22:20:10 +0200 - build 3859

1. Количество конструкций !?<title>?<init>! в user menu теперь не ограничено.

2. Туда же добавлены кнопки Ok и Cancel.

3. В некоторых случаях в полях ввода производилась запись за границей буфера.

drkns 10.04.2014 09:18:34 +0200 - build 3858

1. Опечатка в 3857.

drkns 09.04.2014 22:19:59 +0200 - build 3857

1. Если в процессе удаления файла/каталога кто-то удалил его раньше нас - не показываем ошибки типа "файл не найден", считаем работу выполненной.

2. Во вьювере, открытом из диалога перезаписи, работает переход по Add/Subtract.

3. В редакторе при "Cursor at end" не работал обратный поиск.
 
4. Не собиралась отладочная версия - в 3856 не до конца был вычищен DN_ACTIVATEAPP.

5. Рефакторинг.

zg 09.04.2014 17:49:08 +0200 - build 3856

1. DN_ACTIVATEAPP убрана. вместо неё давно есть DN_INPUT+FOCUS_EVENT.

svs 09.04.2014 09:11:50 +0400 - build 3855

1. Mantis#0001722: DN_EDITCHANGE приходит лишний раз и с ложной информацией

   Подробности:

   1. При старте диалога у "этой" строки редактирования выставлен флаг FEDITLINE_CLEARFLAG (серые буковки).
      В момент ввода символа (вставка или очистка поля ввода) идет сброс флага FEDITLINE_CLEARFLAG и
      очистка содержимого строки. Диалоговая процедура видит это как "PtrData указывает на пустую строку".
      Следом приходит второй DN_EDITCHANGE с теми данными, которые ввели.

